--- a/src/pages/css/Dashboard.scss
+++ b/src/pages/css/Dashboard.scss
@@ -71,3 +71,29 @@
     }
   }
 }
+
+.load-more-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+
+  .btn-load-more {
+    padding: 10px 20px;
+    font-size: 1rem;
+    background-color: #0d6efd;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #0056b3;
+    }
+
+    &:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+  }
+}
